# openmail

./: .bumpversion.toml  .env.example  .gitignore  Makefile  README.md  bun.lockb  install.sh  package-lock.json  package.json  pyrightconfig.json  svelte.config.js  tsconfig.json
app/: .env.example  (+6 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
server/: .env.example  .gitignore  README.md  _types.py  consts.py  main.py  pyproject.toml
server/helpers/: port_scanner.py  uvicorn_logger.py
server/internal/: client_handler.py
server/modules/openmail/: __init__.py  encoder.py  imap.py
server/modules/openmail/tests/: test_connect_operations.py  test_email_operations.py  test_folder_operations.py  test_send_operations.py
server/modules/openmail/tests/utils/: sample_file_generator.py
server/routers/: mailbox_tasks.py
server/src/: consts.py  main.py  utils.py
server/src/helpers/: uvicorn_logger.py
server/src/internal/: account_manager.py  client_handler.py  file_system.py  secure_storage.py
server/src/modules/openmail/: converter.py  openmail.py  parser.py
server/src/routers/: account_tasks.py  mailbox_tasks.py
server/tests/internal/: test_account_manager.py  test_file_system.py  test_secure_storage.py
server/tests/modules/openmail/: test_connect_operations.py  test_email_operations.py  test_fetch_operations.py  test_folder_operations.py  test_idle_operations.py  test_send_operations.py
server/tests/modules/openmail/media/: urls.txt
server/tests/modules/openmail/utils/: dummy_operator.py  sample_file_generator.py
(+589 files in other folders)
